manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-timestamper-svc
spec:
  type: ClusterIP
  selector:
    app: logger-timestamper-dep
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
