manifests/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-server-svc
spec:
  type: NodePort
  selector:
    app: todo-server
  ports:
    - port: 80
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-web-svc
spec:
  type: NodePort
  selector:
    app: todo-web
  ports:
    - port: 80
      targetPort: 3000
