manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-timestamper-ingress
  labels:
    name: logger-timestamper-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /pingpong
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2345
          - pathType: Prefix
            path: /
            backend:
              service:
                name: logger-timestamper-svc
                port:
                  number: 2346
